--- a/src/views/index.html
+++ b/src/views/index.html
@@ -26,6 +26,7 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Roboto+Slab:100,400,700&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/f6cb466394.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="../styles/main.css">
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     </head>
     <body>
         <div class="page-main">
@@ -199,6 +200,49 @@
 
         <div class="page">
             <div class="wrap">
+                <div class="block-carousel">
+                    <div>
+                        <div class="block-carousel-ava">
+                            <div class="block-carousel-thumb">
+                                <img src="../img/ava-fb.png" alt="">
+                            </div>
+                            <span class="block-carousel-bq"></span>
+                        </div>
+                        <h3>Kate Dennings</h3>
+                        <p class="block-carousel__desc block-carousel__expert">Calligraphy Expert</p>
+                        <p class="block-carousel__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. 
+                            Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+                    </div>
+                    <div>
+                        <div class="block-carousel-ava">
+                            <div class="block-carousel-thumb">
+                                <img src="../img/ava-fb.png" alt="">
+                            </div>
+                            <span class="block-carousel-bq"></span>
+                        </div>
+                        <h3>Kate Dennings</h3>
+                        <p class="block-carousel__desc block-carousel__expert">Calligraphy Expert</p>
+                        <p class="block-carousel__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. 
+                            Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+                    </div>
+                    <div>
+                        <div class="block-carousel-ava">
+                            <div class="block-carousel-thumb">
+                                <img src="../img/ava-fb.png" alt="">
+                            </div>
+                            <span class="block-carousel-bq"></span>
+                        </div>
+                        <h3>Kate Dennings</h3>
+                        <p class="block-carousel__desc block-carousel__expert">Calligraphy Expert</p>
+                        <p class="block-carousel__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. 
+                            Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="page">
+            <div class="wrap">
                 <div class="block-author">
                     <div class="block-ava">
                         <svg class="block-ava__svg block-ava__svg--left" width="435" height="704">
@@ -329,5 +373,15 @@
         </div>
 
         <script src="../js/main.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+        <script>
+            $(document).ready(function(){
+                $('.block-carousel').slick({
+                    dots: true,
+                    arrows: false,
+                });
+            });
+        </script>
     </body>
 </html>
