--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,15 +28,32 @@ h3 {
 .wrap {
     max-width: 1170px;
     margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    @media (max-width: 1020px) {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
 
 .page {
     padding-top: 161px;
     padding-bottom: 230px;
     position: relative;
+    @media (max-width: 1020px) {
+        padding-top: 120px;
+        padding-bottom: 120px;
+    }
+    @media (max-width: 480px) {
+        padding-top: 55px;
+        padding-bottom: 120px;
+    }
 
     &-gray {
         background-color: $bg-light-color;
+        @media (max-width: 480px) {
+            padding-bottom: 100px;
+        }
     }
 
     &-events {
@@ -44,6 +61,9 @@ h3 {
     }
     &-carousel {
         padding-top: 69px;
+        @media (max-width: 1020px) {
+            background-color: $bg-dark-color;
+        }
     }
     &__title {
         font-size: 48px;
@@ -52,10 +72,21 @@ h3 {
         margin-top: 3px;
         letter-spacing: 2px;
         color: $title-color;
+        line-height: 1.1;
+        @media (max-width: 480px) {
+            font-size: 42px;
+        }
+        @media (max-width: 320px) {
+            font-size: 35px;
+            line-height: 1;
+        }
     }
     &__title-books {
         margin-bottom: 24px;
         margin-top: 28px;
+        @media (max-width: 480px) {
+            font-size: 42px;
+        }
     }
     &__subtitle {
         font-size: 18px;
@@ -80,12 +111,20 @@ h3 {
         margin: 86px auto;
         letter-spacing: 0.8px;
         box-shadow: 0 2px 0 rgba(101, 228, 125, 0.5);
+        cursor: pointer;
+        @media (max-width: 1020px) {
+            margin: 0 auto;
+        }
     }
     &__svg {
         position: absolute;
-        bottom: -106px;
+        top: 0;
         width: 100%;
         z-index: -1;
+        min-height: 694px;
+        @media (max-width: 1020px) {
+            display: none;
+        }
     }
 }
 
@@ -95,10 +134,20 @@ h3 {
     background-size: cover; 
     color: $light-color;
     padding-bottom: 157px;
+    @media (max-width:1020px) {
+        padding-bottom: 60px;
+    }
 }
 
 .page-author {
     padding-top: 161px;
+    @media (max-width:1020px) {
+        padding-top: 130px;
+    }
+    @media (max-width: 480px) {
+        padding-top: 100px;
+        padding-bottom: 70px;
+    }
 }
 
 .page-books {
@@ -106,6 +155,9 @@ h3 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    @media (max-width: 480px) {
+        padding-top: 45px;
+    }
 }
 
 .page-blog {
@@ -113,10 +165,21 @@ h3 {
     margin-top: -96px;
     padding-bottom: 92px;
     padding-top: 161px;
+    @media (max-width:1020px) {
+        padding-top: 120px;
+        padding-bottom: 40px;
+    }
+    @media (max-width: 480px) {
+        padding-top: 100px;
+    }
 }
 
 .page-letter {
     padding-top: 160px;
+    @media (max-width:900px) {
+        padding-top: 80px;
+        padding-bottom: 160px;
+    }
 }
 
 .header {
@@ -125,8 +188,14 @@ h3 {
     align-items: center;
     max-width: 1170px;
     margin: 0 auto;
-    padding-top: 38px;
-    padding-bottom: 166px;
+    padding: 38px 15px 166px 15px;
+    @media (max-width:1020px) {
+        padding-bottom: 100px;
+    }
+    @media (max-width: 920px) {
+        flex-direction: column;
+        padding-bottom: 50px;
+    }
     &__logo {
         background-image: url("../img/logo.svg");
         background-repeat: no-repeat;
@@ -141,6 +210,13 @@ h3 {
         justify-content: flex-end;
         font-family: "Open Sans", sans-serif;
         margin-top: 10px;
+        @media (max-width: 780px) {
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+        @media (max-width: 480px) {
+            display: none;
+        }
         &__item {
             margin-left: 23px;
             padding-bottom: 3px;
@@ -163,8 +239,28 @@ h3 {
 
 .block-text {
     flex-basis: calc(100% - 500px);
+    @media (max-width: 1020px) {
+        flex-basis: calc(93% - 315px);
+    }
     &--width {
         flex-basis: calc(93% - 517px);
+        @media (max-width: 1020px) {
+            flex-basis: calc(93% - 315px);
+        }
+    }
+    &--main {
+        @media (max-width:1020px) {
+            text-align: center;
+        }
+    }
+    &--author {
+        @media (max-width:1020px) {
+            padding-left: 60px;
+            margin-top: -30px;
+        }
+        @media (max-width: 850px) {
+            padding-left: 0px;
+        } 
     }
     &__name {
         font-family: "Open Sans", sans-serif;
@@ -186,16 +282,29 @@ h3 {
     &__title {
         font-size: 48px;
         font-weight: 700;
+        line-height: 53px;
         letter-spacing: 1.8px;
         margin-bottom: 39px;
         margin-top: 44px;
         color: $light-color;
+        @media (max-width:1020px) {
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+        @media (max-width: 480px) {
+            font-size: 42px;
+        }
+        @media (max-width: 320px) {
+            font-size: 35px;
+            line-height: 1;
+        }
         span {
             display: block;
             color: $accent-color;
             font-size: 18px;
             letter-spacing: 0.9px;
             margin-top: 24px;
+            line-height: 23px;
         }
     }
     &__title-events {
@@ -218,12 +327,25 @@ h3 {
         margin-top: 20px;
         width: 88%;
         color: $light-color;
+        @media (max-width:1020px) {
+            padding-left: 0px;
+            margin: 20px auto;
+        }
     }
     &__description-author {
         color: $font-color;
         font-size: 15px;
         padding-right: 70px;
         padding-bottom: 4px;
+        @media (max-width:1020px) {
+            padding-left: 0px;
+        }
+        @media (max-width: 850px) {
+            text-align: center;
+            padding-right: 0px;
+            margin: 15px auto 20px;
+        }
+        
     }
     &__btn {
         display: block;
@@ -238,13 +360,21 @@ h3 {
         margin-top: 48px;
         padding: 13px 0;
         letter-spacing: 0.7px;
-        margin-top: 48px;
         margin-bottom: 14px;
         box-shadow: 0 2px 0 rgba(101, 228, 125, 0.5);
+        @media (max-width:1020px) {
+            margin: 40px auto 10px;
+        }
     }
     &__btn-author {
         margin-top: 44px;
         max-width: 238px;
+        @media (max-width:1020px) {
+            margin: 50px 0 0 0;
+        }
+        @media (max-width: 850px) {
+            margin: 44px auto;
+        }
     }
     &-item {
         margin-bottom: 57px;
@@ -277,11 +407,14 @@ h3 {
             border-radius: 3px;
             text-align: center;
             font-size: 18px;
-            margin-top: 48px;
             padding: 11px 0px 13px 3px;
             letter-spacing: 0.7px;
             margin-top: 25px;
             box-shadow: 0 2px 0 rgba(101, 228, 125, 0.5);
+            @media (max-width: 850px) {
+                text-align: center;
+                margin: 25px auto;
+            }
         }
     }
 }
@@ -289,15 +422,33 @@ h3 {
 .block-book {
     display: flex;
     justify-content: space-between;
+    @media (max-width:1020px) {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
     &-demo {
         display: block;
         position: relative;
-        width: 447px;
+        width: 100%;
         height: 643px;
         background-image: url("../img/bookcover-large.svg");
         background-repeat: no-repeat;
         flex-basis: 500px;
         margin-top: 13px;
+        &--main {
+            @media (max-width:1020px) {
+                width: 447px;
+                height: 643px;
+                flex-basis: 650px;
+                margin: 29px auto;
+            }
+            @media (max-width:500px) {
+                width: 50%px;
+                height: 643px;
+                flex-basis: 650px;
+                margin: 29px auto;
+            }
+        }
         &__title {
             position: absolute;
             font-size: 36px;
@@ -356,34 +507,68 @@ h3 {
         font-size: 12px;
         font-style: italic;
         letter-spacing: 0.5px;
+        @media (max-width:1020px) {
+            margin: 0px;
+        }
     }
 }
 
 .block-author {
     display: flex;
     justify-content: space-between;
-
+    @media (max-width: 850px) {
+        flex-direction: column-reverse;
+        text-align: center;
+    }
 }
 
 .block-ava {
     position: relative;
+    @media (max-width: 850px) {
+        position: relative;
+        max-width: 356px;
+        margin: 0 auto 80px;
+    }
     &__svg {
         position: absolute;
         z-index: -1;
         right: 0;
+        @media (max-width: 1020px) {
+            width: 300px;
+            height: 412px;
+        }
+        @media (max-width: 350px) {
+            width: 250px;
+            height: 340px;
+            right: 20px;
+        }
     }
     &__svg--left {
         right: inherit;
         left: 0;
+        @media (max-width: 350px) {
+            width: 250px;
+            left: -10px;
+        }
     }
     &__img--left {
         margin-top: 49px;
         margin-left: 51px;
         margin-right: 0;
+        @media (max-width: 350px) {
+            width: 220px;
+            margin-left: 15px;
+        }
     }
     &__img {
         margin-top: 47px;
         margin-right: 44px;
+        @media (max-width: 1020px) {
+            width: 300px;
+        }
+        @media (max-width: 350px) {
+            width: 250px;
+        }
     }
 }
 
@@ -391,14 +576,33 @@ h3 {
     display: flex;
     justify-content: space-between;
     margin: 193px 62px 141px 83px;
+    @media (max-width: 1020px) {
+        margin: 100px 62px 141px 83px;
+    }
+    @media (max-width: 850px) {
+        margin-top: 50px;
+        margin-bottom: 100px;
+    } 
+    @media (max-width: 750px) {
+        flex-direction: column;
+        margin: 0 auto;
+    }
     p {
         font-family: "Open Sans", sans-serif;
         text-align: center;
         font-size: 18px;
         color: $font-color;
         letter-spacing: 0.9px;
+        @media (max-width: 850px) {
+            margin-bottom: 30px;
+        }
+
         &:nth-child(2) {
             margin-left: 19px;
+            @media (max-width: 850px) {
+                margin-left: 0px;
+                margin-bottom: 50px;
+            } 
         }
         span {
             font-family: "Roboto Slab", serif;
@@ -407,7 +611,10 @@ h3 {
             font-size: 80px;
             color: $accent-color;
             margin-bottom: 45px;
-            letter-spacing: 2.7px;   
+            letter-spacing: 2.7px;  
+            @media (max-width: 850px) {
+                font-size: 60px;
+            } 
         }
     }
 }
@@ -416,6 +623,11 @@ h3 {
     display: flex;
     justify-content: space-between;
     margin-top: 82px;
+    @media (max-width: 1020px) {
+        max-width: 750px;
+        margin: 82px auto 0;
+        flex-direction: column;
+    }
     &-text__title {
         margin-bottom: 18px;
         margin-left: 2px;
@@ -426,7 +638,10 @@ h3 {
         margin-bottom: 13px;
     }
     &-text {
-        flex-basis: 41%;
+        flex-basis: calc(100% - 690px);
+        @media (max-width: 1020px) {
+            flex-basis: 100%;
+        }
         &__title {
             color: $title-color;
         }
@@ -435,7 +650,11 @@ h3 {
         }
     }
     &-table {
-        flex-basis: 50%;
+        flex-basis: 585px;
+        @media (max-width: 1020px) {
+            flex-basis: 100%;
+            margin-top: 40px;
+        }
         &__title {
             color: $title-color;
             margin-left: 14px;
@@ -451,6 +670,10 @@ h3 {
             font-family: "Roboto Slab", serif;
             font-size: 18px;
             margin-left: 17px;
+            cursor: pointer;
+            &:focus {
+                outline: none;
+            }
         }
         &__list {
             margin: 25px 0 0 14px;
@@ -459,6 +682,9 @@ h3 {
             counter-reset: list;
             column-count: 2;
             column-gap: 29px;
+            @media (max-width: 630px) {
+                column-count: 1;
+            }
             &>li {
                 position: relative;
                 padding-left: 36px;
@@ -476,11 +702,26 @@ h3 {
                     line-height: 22px;
                     position: absolute;
                     left: 0;
-                    top: 1px;
+                    top: calc(50% - 10px);
                     background-color: #5189a0;
                     color: $light-color;
                     padding: 0px 7px;
                 }
+            }
+        }
+        &__list--next {
+            display: none;
+            counter-increment: list 10;
+            position: relative;
+            &::before {
+                content: "";
+                display: block;
+                position: absolute;
+                top: -16px;
+                width: 100px;
+                height: 2px;
+                background-color: #5189a0;
+
             }
         }
     }
@@ -513,6 +754,12 @@ h3 {
     display: flex;
     justify-content: space-between;
     margin-top: 71px; 
+    @media (max-width: 1020px) {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 50px; 
+    }
 
     &-example {
     display: flex;
@@ -520,6 +767,9 @@ h3 {
     justify-content: center;
     align-items: center;
     width: 31.5%;
+    @media (max-width: 1020px) {
+        width: 100%;
+    }
     }
     &-text {
         font-family: "Open Sans", sans-serif;
@@ -534,13 +784,18 @@ h3 {
             font-size: 24px;
             font-weight: 700;
             color: $title-color;
+            @media (max-width: 1020px) {
+                margin-bottom: 10px;
+            }
         }
         &__desc {
             text-align: center;
             letter-spacing: 0.8px;
             margin-top: 17px;
             color: $font-color;
-
+            @media (max-width: 1020px) {
+                margin: 0 auto 17px;
+            }
         }
         &__more {
             color: $accent-color;
@@ -548,6 +803,12 @@ h3 {
             text-decoration: none;
             font-weight: 700;
             letter-spacing: 1px;
+            transition: 0.3s;
+            @media (max-width: 1020px) {
+                display: block;
+                margin: 0 auto 30px;
+                max-width: 120px;
+            }
         }
     }
 }
@@ -556,6 +817,11 @@ h3 {
     display: flex;
     justify-content: space-between;
     margin-top: 83px;
+    @media (max-width: 900px) {
+        flex-direction: column;
+        max-width: 550px;
+        margin: 60px auto 0;
+    }
     h4 {
         font-size: 18px;
         color: $title-color;
@@ -564,12 +830,12 @@ h3 {
         font-weight: 700;
     }
     &-img {
-        width: 369px;
+        width: 100%;
         height: 224px;
         overflow: hidden;
         position: relative;
         img {
-            width: 369px;
+            width: 100%;
             height: 224px;
             position: absolute;
             left: 50%;
@@ -579,7 +845,13 @@ h3 {
         }
     }
     &-item {
+        flex-basis: 32%;
         margin-right: 31px;
+        @media (max-width: 900px) {
+            margin-bottom: 40px;
+            margin: 0 auto;
+            margin-bottom: 20px;
+        }
     }
     &-info {
         font-size: 15px;
@@ -589,9 +861,16 @@ h3 {
         align-items: center;
         margin-top: -12px;
         letter-spacing: 0.75px;
+        flex-wrap: wrap;
         a {
             color: $accent-color;
             text-decoration: none;
+            @media (max-width: 1020px) {
+                margin-bottom: 20px;
+            }
+            @media (max-width: 900px) {
+                margin-bottom: 0px;
+            }
         }
     }
     &__desc {
@@ -600,20 +879,34 @@ h3 {
         color: $font-color;
         margin-top: -3px;
         letter-spacing: 0.7px;
+        @media (max-width: 900px) {
+            text-align: center;
+            margin-top: 10px;
+        }
     }
     & + .page__btn--blog {
         display: block;
         margin: 69px auto;
         padding: 14px 28px;
         max-width: 265px;
+        @media (max-width: 900px) {
+            margin: 20px auto 60px;
+        }
     }
 }
 
 .block-letter {
     display: flex;
     justify-content: space-between;
+    @media (max-width: 1020px) {
+        flex-direction: column;
+        text-align: center;
+    }
     &-item {
         flex-basis: 49%;
+        @media (max-width: 1020px) {
+            flex-basis: 100%;
+        }
     }
     &__title {
         font-size: 48px;
@@ -622,12 +915,20 @@ h3 {
         margin-top: 8px;
         color: $title-color;
         font-weight: 700;
+        line-height: 1.1;
+        @media (max-width: 320px) {
+            font-size: 35px;
+            line-height: 1;
+        }
     }
     &__text {
         font-size: 15px;
         font-family: "Open Sans", sans-serif;
         letter-spacing: 0.75px;
         color: $font-color;
+        @media (max-width: 1020px) {
+            margin-bottom: 40px;
+        }
     }
     &__input {
         width: 100%;
@@ -638,6 +939,9 @@ h3 {
         box-sizing: border-box;
         border-radius: 3px;
         letter-spacing: 0.6px;
+        @media (max-width: 1020px) {
+            max-width: 500px;
+        }
         &:focus {
             outline: none;
         }
@@ -661,6 +965,11 @@ h3 {
         letter-spacing: 0.7px;
         margin-top: 22px;
         box-shadow: 0 2px 0 rgba(101, 228, 125, 0.5);
+        cursor: pointer;
+        @media (max-width: 1020px) {
+            max-width: 500px;
+            margin: 22px auto;
+        }
         &:focus {
             outline: none;
         }
@@ -672,16 +981,28 @@ h3 {
     color: $gray-color;
     padding: 155px 0 163px;
     margin-top: -91px;
+    @media (max-width: 1020px) {
+        padding: 55px 0 40px;
+    }
 }
 
 .block-footer {
     display: flex;
     justify-content: space-between;
+    @media (max-width: 900px) {
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+    }
     &>div {
         flex-basis: 23%;
         font-family: "Open Sans", sans-serif;
         &:first-child {
             flex-basis: 31%;
+        }
+        @media (max-width: 900px) {
+            margin-bottom: 50px;
+            align-items: center;
         }
     }
     &__logo {
@@ -689,11 +1010,17 @@ h3 {
         width: 137px;
         height: 28px;
         background-image: url(../img/logoFooter.svg);
+        @media (max-width: 900px) {
+            margin: 0 auto;
+        }
     }
     &__desc {
         margin-top: 33px;
         letter-spacing: 0.55px;
         margin-bottom: -10px;
+        @media (max-width: 900px) {
+            margin-top: 25px;
+        }
     }
     &__title {
        color: $accent-color;
@@ -730,6 +1057,9 @@ h3 {
         display: flex;
         list-style-type: none;
         padding-left: 0;
+        @media (max-width: 900px) {
+            margin: 0 0 0 50px;
+         }
         &>li {
             margin-right: 18px;
             margin-left: -4px;
