--- a/src/views/index.html
+++ b/src/views/index.html
@@ -48,13 +48,13 @@
             </header>
             <div class="wrap">
                 <div class="block-book">
-                    <div class="block-book-demo">
+                    <div class="block-book-demo block-book-demo--main">
                         <h2 class="block-book-demo__title">Good book
                             <span>Don’t judge a book by its cover</span>
                         </h2>
                         <p class="block-book-demo__author">- By Emma Anderson</p>
                     </div>
-                    <div class="block-text">
+                    <div class="block-text block-text--main">
                         <p class="block-text__name">- By Emma Anderson</p>
                         <h1 class="block-text__title">BUKEE: THE BOOK
                         <span>A room without books is like a body without a soul</span></h1>
@@ -72,7 +72,7 @@
         <div class="page-author">
             <div class="wrap">
                 <div class="block-author">
-                    <div class="block-text">
+                    <div class="block-text block-text--author">
                         <p class="block-text__name block-text__name-author">- Book Author</p>
                         <h1 class="block-text__title block-text__title-author">Emma Anderson
                         <span>A room without books is like a body without a soul</span></h1> 
@@ -140,7 +140,19 @@
                             <li>Consectetur adipisicing elit</li>
                             <li>Labore et dolore magna</li>
                         </ol>
-                        <button class="block-about-table__button">More</button>
+                        <ol class="block-about-table__list block-about-table__list--next" id="nextContentList">
+                            <li>Lorem ipsum dolor sit amet</li>
+                            <li>Consectetur adipisicing elit</li>
+                            <li>Labore et dolore magna</li>
+                            <li>Consectetur adipisicing elit</li>
+                            <li>Labore et dolore magna</li>
+                            <li>Lorem ipsum dolor sit amet</li>
+                            <li>Consectetur adipisicing elit</li>
+                            <li>Labore et dolore magna</li>
+                            <li>Consectetur adipisicing elit</li>
+                            <li>Labore et dolore magna</li>
+                        </ol>
+                        <button id="nextContent" class="block-about-table__button">More</button>
                     </div>
                 </div>
             </div>
@@ -382,6 +394,10 @@
                     dots: true,
                     arrows: false,
                 });
+            });
+            $("#nextContent").click(function(){
+                $("#nextContentList").fadeIn();
+                $("#nextContent").hide();
             });
         </script>
     </body>
